--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <header>
   <img src="logo.webp" alt="Rukmini Trends Logo" class="logo" />
   <p>Elegant. Modern. Timeless.</p>
-  <a class="btn" href="https://wa.me/91XXXXXXXXXX?text=Hi%20Rukmini%20Trends%2C%20I%20want%20to%20order">
+  <a class="btn" href="https://wa.me/917022238899?text=Hi%20Rukmini%20Trends%2C%20I%20want%20to%20order">
     Order on WhatsApp
   </a>
 </header>
