--- a/index.html
+++ b/index.html
@@ -1,7 +1,50 @@
-<header>
-  <img src="logo.webp" alt="Rukmini Trends Logo" class="logo" />
-  <p>Elegant. Modern. Timeless.</p>
-  <a class="btn" href="https://wa.me/917022238899?text=Hi%20Rukmini%20Trends%2C%20I%20want%20to%20order">
-    Order on WhatsApp
-  </a>
-</header>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Rukmini Trends</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+
+  <!-- Header section -->
+  <header>
+    <img src="logo.webp" alt="Rukmini Trends Logo" class="logo" />
+    <h1>Rukmini Trends</h1>
+    <p>Elegant. Modern. Timeless.</p>
+  </header>
+
+  <!-- Product section -->
+  <section class="products">
+    <h2>Our Latest Collection</h2>
+    <div class="product-grid">
+      <div class="product">
+        <img src="images/dress1.jpg" alt="Anarkali Dress">
+        <h3>Anarkali Dress</h3>
+        <p>₹2,499</p>
+        <a class="buy" href="https://wa.me/91XXXXXXXXXX?text=Hi%20Rukmini%20Trends%2C%20I'm%20interested%20in%20the%20Anarkali%20Dress">Buy Now</a>
+      </div>
+
+      <div class="product">
+        <img src="images/dress2.jpg" alt="Silk Saree">
+        <h3>Silk Saree</h3>
+        <p>₹3,199</p>
+        <a class="buy" href="https://wa.me/91XXXXXXXXXX?text=Hi%20Rukmini%20Trends%2C%20I'm%20interested%20in%20the%20Silk%20Saree">Buy Now</a>
+      </div>
+
+      <div class="product">
+        <img src="images/dress3.jpg" alt="Kurti Set">
+        <h3>Kurti Set</h3>
+        <p>₹1,699</p>
+        <a class="buy" href="https://wa.me/91XXXXXXXXXX?text=Hi%20Rukmini%20Trends%2C%20I'm%20interested%20in%20the%20Kurti%20Set">Buy Now</a>
+      </div>
+    </div>
+  </section>
+
+  <footer>
+    <p>© 2025 Rukmini Trends. All rights reserved.</p>
+  </footer>
+
+</body>
+</html>
