--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Rukmini Trends - Kurti Set</title>
+  <title>Rukmini Trends - Boutique</title>
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
@@ -19,14 +19,27 @@
   <section class="products">
     <h2>Available Products</h2>
     <div class="product-grid">
+
+      <!-- Product 1: Kurti Set -->
       <div class="product">
         <img src="images/dress1.jpg" alt="Kurti Set" />
         <h3>Kurti Set</h3>
         <p>₹1,599</p>
-        <a class="buy" href="https://wa.me/917022238899?text=Hi%20Rukmini%20Trends%2C%20I'm%20interested%20in%20buying%20the%20Kurti%20Set">
+        <a class="buy" href="https://wa.me/917022238899?text=Hi%20Rukmini%20Trends%2C%20I'm%20interested%20in%20the%20Kurti%20Set%20(₹1,599).">
           Order Now
         </a>
       </div>
+
+      <!-- Product 2: Arifa Blue Gown -->
+      <div class="product">
+        <img src="images/arifa2.jpg" alt="Arifa Blue Gown" />
+        <h3>Arifa Blue Gown</h3>
+        <p>₹999</p>
+        <a class="buy" href="https://wa.me/917022238899?text=Hi%20Rukmini%20Trends%2C%20I'm%20interested%20in%20the%20Arifa%20Blue%20Gown%20(₹999).">
+          Order Now
+        </a>
+      </div>
+
     </div>
   </section>
 
