--- a/index.html
+++ b/index.html
@@ -42,13 +42,11 @@
     <h2>Available Products</h2>
     <div class="product-grid">
 
-      <!-- Product 1 -->
+      <!-- Dress 1 -->
       <div class="product">
-        <img src="images/dress1.jpg" alt="Dress 1" />
-        <h3>Dress 1</h3>
+        <img src="images/dress1.jpg" alt="Product 1" />
         <p>₹1,599</p>
         <div class="size-options">
-          <span>Select Size:</span><br />
           <button class="size-btn" onclick="selectSize(this, 'Dress 1', 'M')">M</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 1', 'L')">L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 1', 'XL')">XL</button>
@@ -57,13 +55,11 @@
         <a class="buy" id="link1" href="#" target="_blank">Order Now</a>
       </div>
 
-      <!-- Product 2 -->
+      <!-- Dress 2 -->
       <div class="product">
-        <img src="images/dress2.jpg" alt="Dress 2" />
-        <h3>Dress 2</h3>
+        <img src="images/dress2.jpg" alt="Product 2" />
         <p>₹1,499</p>
         <div class="size-options">
-          <span>Select Size:</span><br />
           <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'M')">M</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'L')">L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'XL')">XL</button>
@@ -72,13 +68,11 @@
         <a class="buy" id="link2" href="#" target="_blank">Order Now</a>
       </div>
 
-      <!-- Product 3 -->
+      <!-- Dress 3 -->
       <div class="product">
-        <img src="images/dress3.jpg" alt="Dress 3" />
-        <h3>Dress 3</h3>
+        <img src="images/dress3.jpg" alt="Product 3" />
         <p>₹1,299</p>
         <div class="size-options">
-          <span>Select Size:</span><br />
           <button class="size-btn" onclick="selectSize(this, 'Dress 3', 'M')">M</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 3', 'L')">L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 3', 'XL')">XL</button>
@@ -87,13 +81,11 @@
         <a class="buy" id="link3" href="#" target="_blank">Order Now</a>
       </div>
 
-      <!-- Product 4 -->
+      <!-- Dress 4 -->
       <div class="product">
-        <img src="images/dress4.jpg" alt="Dress 4" />
-        <h3>Dress 4</h3>
+        <img src="images/dress4.jpg" alt="Product 4" />
         <p>₹999</p>
         <div class="size-options">
-          <span>Select Size:</span><br />
           <button class="size-btn" onclick="selectSize(this, 'Dress 4', 'M')">M</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 4', 'L')">L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 4', 'XL')">XL</button>
@@ -102,13 +94,11 @@
         <a class="buy" id="link4" href="#" target="_blank">Order Now</a>
       </div>
 
-      <!-- Product 5 -->
+      <!-- Dress 5 -->
       <div class="product">
-        <img src="images/dress5.jpg" alt="Dress 5" />
-        <h3>Dress 5</h3>
+        <img src="images/dress5.jpg" alt="Product 5" />
         <p>₹899</p>
         <div class="size-options">
-          <span>Select Size:</span><br />
           <button class="size-btn" onclick="selectSize(this, 'Dress 5', 'M')">M</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 5', 'L')">L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 5', 'XL')">XL</button>
@@ -132,7 +122,7 @@
       button.classList.add('selected');
 
       const encodedMessage = encodeURIComponent(
-        `Hi Rukmini Trends, I'm interested in the ${productName} (${size})`
+        `Hi Rukmini Trends, I'm interested in ${productName} (${size})`
       );
       const waLink = `https://wa.me/917022238899?text=${encodedMessage}`;
 
