--- a/index.html
+++ b/index.html
@@ -26,6 +26,14 @@
       background: #ff1493;
       color: white;
     }
+
+    /* Disabled size style */
+    .size-btn.disabled {
+      border-color: #ccc;
+      color: #aaa;
+      cursor: not-allowed;
+      background: #f4f4f4;
+    }
   </style>
 </head>
 <body>
@@ -63,7 +71,7 @@
           <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'M')">M</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'L')">L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'XL')">XL</button>
-          <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'XXL')">XXL</button>
+          <button class="size-btn disabled" disabled>XXL</button>
         </div>
         <a class="buy" id="link2" href="#" target="_blank">Order Now</a>
       </div>
@@ -76,7 +84,7 @@
           <button class="size-btn" onclick="selectSize(this, 'Dress 3', 'M')">M</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 3', 'L')">L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 3', 'XL')">XL</button>
-          <button class="size-btn" onclick="selectSize(this, 'Dress 3', 'XXL')">XXL</button>
+          <button class="size-btn disabled" disabled>XXL</button>
         </div>
         <a class="buy" id="link3" href="#" target="_blank">Order Now</a>
       </div>
@@ -89,7 +97,7 @@
           <button class="size-btn" onclick="selectSize(this, 'Dress 4', 'M')">M</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 4', 'L')">L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 4', 'XL')">XL</button>
-          <button class="size-btn" onclick="selectSize(this, 'Dress 4', 'XXL')">XXL</button>
+          <button class="size-btn disabled" disabled>XXL</button>
         </div>
         <a class="buy" id="link4" href="#" target="_blank">Order Now</a>
       </div>
@@ -102,7 +110,7 @@
           <button class="size-btn" onclick="selectSize(this, 'Dress 5', 'M')">M</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 5', 'L')">L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 5', 'XL')">XL</button>
-          <button class="size-btn" onclick="selectSize(this, 'Dress 5', 'XXL')">XXL</button>
+          <button class="size-btn disabled" disabled>XXL</button>
         </div>
         <a class="buy" id="link5" href="#" target="_blank">Order Now</a>
       </div>
@@ -117,7 +125,7 @@
 
   <script>
     function selectSize(button, productName, size) {
-      const buttons = button.parentElement.querySelectorAll('.size-btn');
+      const buttons = button.parentElement.querySelectorAll('.size-btn:not(.disabled)');
       buttons.forEach(btn => btn.classList.remove('selected'));
       button.classList.add('selected');
 
