--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
           <button class="size-btn" onclick="selectSize(this, 'Dress 1', 'XL')">XL</button>
           <button class="size-btn disabled" disabled>XXL</button>
         </div>
-        <a class="buy" id="link1" href="#" target="_blank">Order Now</a>
+        <a class="buy" href="#" target="_blank">Order Now</a>
       </div>
 
       <!-- Dress 2 -->
@@ -71,9 +71,9 @@
           <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'M')">M</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'L')">L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'XL')">XL</button>
-          <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'XLL')">XLL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Dress 2', 'XXL')">XXL</button>
         </div>
-        <a class="buy" id="link2" href="#" target="_blank">Order Now</a>
+        <a class="buy" href="#" target="_blank">Order Now</a>
       </div>
 
       <!-- Dress 3 -->
@@ -86,7 +86,7 @@
           <button class="size-btn" onclick="selectSize(this, 'Dress 3', 'XL')">XL</button>
           <button class="size-btn disabled" disabled>XXL</button>
         </div>
-        <a class="buy" id="link3" href="#" target="_blank">Order Now</a>
+        <a class="buy" href="#" target="_blank">Order Now</a>
       </div>
 
       <!-- Dress 4 -->
@@ -97,9 +97,9 @@
           <button class="size-btn disabled" disabled>M</button>
           <button class="size-btn disabled" disabled>L</button>
           <button class="size-btn" onclick="selectSize(this, 'Dress 4', 'XL')">XL</button>
-          <button class="size-btn" onclick="selectSize(this, 'Dress 4', 'XLL')">XLL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Dress 4', 'XXL')">XXL</button>
         </div>
-        <a class="buy" id="link4" href="#" target="_blank">Order Now</a>
+        <a class="buy" href="#" target="_blank">Order Now</a>
       </div>
 
       <!-- Dress 5 -->
@@ -112,7 +112,7 @@
           <button class="size-btn disabled" disabled>XL</button>
           <button class="size-btn disabled" disabled>XXL</button>
         </div>
-        <a class="buy" id="link5" href="#" target="_blank">Order Now</a>
+        <a class="buy" href="#" target="_blank">Order Now</a>
       </div>
 
     </div>
