--- a/index.html
+++ b/index.html
@@ -52,12 +52,12 @@
 
       <!-- Dress 1 -->
       <div class="product">
-        <img src="images/dress1.jpg" alt="Product 1" />
+        <img src="images/Kurti Set1.jpg" alt="Product 1" />
         <p>₹1,599</p>
         <div class="size-options">
-          <button class="size-btn" onclick="selectSize(this, 'Dress 1', 'M')">M</button>
-          <button class="size-btn" onclick="selectSize(this, 'Dress 1', 'L')">L</button>
-          <button class="size-btn" onclick="selectSize(this, 'Dress 1', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 1', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 1', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 1', 'XL')">XL</button>
           <button class="size-btn disabled" disabled>XXL</button>
         </div>
         <a class="buy" href="#" target="_blank">Order Now</a>
