Add new dress products to index.html

--- a/index.html
+++ b/index.html
@@ -101,7 +101,7 @@
         <a class="buy" href="#" target="_blank">Order Now</a>
       </div>
 
-      <!-- Dress 5 -->
+      <!-- Dress 5 --> 
       <div class="product">
         <img src="images/Kurti Set5.jpg" alt="Product 5" />
         <p>₹899</p>
@@ -114,7 +114,187 @@
         <a class="buy" href="#" target="_blank">Order Now</a>
       </div>
 
-    </div>
+      <!-- Dress 6 -->
+      <div class="product">
+        <img src="images/Kurti Set6.jpg" alt="Product 6" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 6', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 6', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 6', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 6', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+      
+      <!-- Dress 7 -->
+      <div class="product">
+        <img src="images/Kurti Set7.jpg" alt="Product 7" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 7', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 7', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 7', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 7', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 8 -->
+      <div class="product">
+        <img src="images/Kurti Set8.jpg" alt="Product 8" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 8', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 8', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 8', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 8', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 9 -->
+      <div class="product">
+        <img src="images/Kurti Set9.jpg" alt="Product 9" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 9', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 9', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 9', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 9', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 10 -->
+      <div class="product">
+        <img src="images/Kurti Set10.jpg" alt="Product 10" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 10', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 10', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 10', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 10', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 11 -->
+      <div class="product">
+        <img src="images/Kurti Set11.jpg" alt="Product 11" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 11', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 11', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 11', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 11', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 12 -->
+      <div class="product">
+        <img src="images/Kurti Set12.jpg" alt="Product 12" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 12', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 12', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 12', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 12', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 13 -->
+      <div class="product">
+        <img src="images/Kurti Set13.jpg" alt="Product 13" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 13', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 13', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 13', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 13', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 14 -->
+      <div class="product">
+        <img src="images/Kurti Set14.jpg" alt="Product 14" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 14', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 14', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 14', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 14', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 15 -->
+      <div class="product">
+        <img src="images/Kurti Set15.jpg" alt="Product 15" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 15', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 15', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 15', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 15', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 16 -->
+      <div class="product">
+        <img src="images/Kurti Set16.jpg" alt="Product 16" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 16', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 16', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 16', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 16', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 17 -->
+      <div class="product">
+        <img src="images/Kurti Set17.jpg" alt="Product 17" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 17', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 17', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 17', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 17', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 18 -->
+      <div class="product">
+        <img src="images/Kurti Set18.jpg" alt="Product 18" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 18', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 18', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 18', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 18', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
+      <!-- Dress 19 -->
+      <div class="product">
+        <img src="images/Kurti Set19.jpg" alt="Product 19" />
+        <p>₹1,200</p>
+        <div class="size-options">
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 19', 'M')">M</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 19', 'L')">L</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 19', 'XL')">XL</button>
+          <button class="size-btn" onclick="selectSize(this, 'Kurti Set 19', 'XXL')">XXL</button>
+        </div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
   </section>
 
   <!-- Footer -->
