Fix size-options div formatting in index.html

--- a/index.html
+++ b/index.html
@@ -248,8 +248,7 @@
       <div class="product">
         <img src="images/Kurti Set16.jpg" alt="Product 16" />
         <p>₹1,199</p>
-        <div class="size-options">
-        </div>
+        <div class="size-options"></div>
         <a class="buy" href="#" target="_blank">Order Now</a>
       </div>
 
