Add Dress 21 product section in index.html

--- a/index.html
+++ b/index.html
@@ -289,6 +289,14 @@
         <a class="buy" href="#" target="_blank">Order Now</a>
       </div>
 
+       <!-- Dress 21 (NO SIZE) -->
+      <div class="product">
+        <img src="images/Kurti Set20.jpg" alt="Kurti Set 20" />
+        <p>₹750</p>
+        <div class="size-options"></div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
       
     </div>
   </section>
