Add Dress 22 product section to index.html

--- a/index.html
+++ b/index.html
@@ -297,6 +297,14 @@
         <a class="buy" href="#" target="_blank">Order Now</a>
       </div>
 
+      <!-- Dress 22 (NO SIZE) -->
+      <div class="product">
+        <img src="images/Kurti Set22.jpg" alt="Kurti Set 22" />
+        <p>₹999</p>
+        <div class="size-options"></div>
+        <a class="buy" href="#" target="_blank">Order Now</a>
+      </div>
+
       
     </div>
   </section>
