--- a/index.html
+++ b/index.html
@@ -54,9 +54,9 @@
 
     .product img {
       width: 100%;
+      height: 280px;
+      object-fit: cover;  /* Image keeps shape without stretching */
       border-radius: 8px;
-      height: 280px;      /* Adjust image height */
-      object-fit: cover;  /* Keeps image proportion trimmed nicely 
       cursor: pointer;
       transition: 0.2s ease;
     }
@@ -147,7 +147,7 @@
 
   <section class="products">
     <h2>Shop the latest collection now! Enjoy free delivery and the best prices</h2>
-
+    
       <!-- Products 1 to 24 -->
       <!-- Dress 1 -->
       <div class="product">
