Adjust product image height and maintain styles

--- a/index.html
+++ b/index.html
@@ -54,12 +54,13 @@
 
     .product img {
       width: 100%;
-      height: 280px;
-      object-fit: cover;  /* Image keeps shape without stretching */
+      height: 250px;        /* Medium size like your screenshot */
+      object-fit: cover;    /* SAME style that created your screenshot */
       border-radius: 8px;
-      cursor: pointer;
-      transition: 0.2s ease;
-    }
+     cursor: pointer;
+     transition: 0.2s ease;
+   }
+
     .product img:hover { transform: scale(1.05); }
 
     .size-options { margin-top: 10px; }
