--- a/index.html
+++ b/index.html
@@ -33,6 +33,33 @@
       cursor: not-allowed;
       background: #f4f4f4;
     }
+    /* ⭐ ZOOM POPUP (added only this) ⭐ */
+    .zoom-popup {
+      display: none;
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      background: rgba(0,0,0,0.85);
+      justify-content: center;
+      align-items: center;
+      z-index: 9999;
+    }
+    .zoom-popup img {
+      max-width: 90%;
+      max-height: 90%;
+      border-radius: 10px;
+    }
+    .close-zoom {
+      position: absolute;
+      top: 20px;
+      right: 30px;
+      font-size: 40px;
+      color: white;
+      cursor: pointer;
+      font-weight: bold;
+    }
   </style>
 </head>
 <body>
