--- a/index.html
+++ b/index.html
@@ -355,7 +355,12 @@
   <footer>
     <p>© 2025 Rukmini Trends. All rights reserved.</p>
   </footer>
-
+   <!-- ⭐ ZOOM POPUP HTML ⭐ -->
+  <div class="zoom-popup" id="zoomPopup">
+    <span class="close-zoom" onclick="closeZoom()">×</span>
+    <img id="zoomImage" src="" />
+  </div>
+  
   <!-- WhatsApp Script -->
   <script>
     function selectSize(button, productName, size) {
